@@ -2,6 +2,7 @@
 v3.2.16-git
 -----------
 
+[jan] Officially support PHP 7.
 
 
 -------
